# PerfectChord

./: .env-ex  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yaml  alembic.ini  docker-compose.yml  pyproject.toml  vader
backend/: __init__.py  __main__.py  gunicorn_runner.py  logging.py  settings.py
backend/domain/: __init__.py  base.py  builders.py  models.py  uscases.py
backend/domain/auth/: __init__.py  builders.py  constants.py  credentials.py  exceptions.py  models.py  services.py  uscases.py
backend/domain/song/: __init__.py  builders.py  models.py  uscases.py
backend/domain/user/: builders.py  exceptions.py  models.py  services.py  tempCodeRunnerFile.py  uscases.py
backend/gateways/: __init__.py
backend/gateways/db/: __init__.py  builders.py  gateway.py  nosql_gateway.py  sql_gateway.py
backend/gateways/db/mongo/: __init__.py  gateway.py
backend/gateways/db/postgre/: __init__.py  gateway.py
backend/infrastructure/: base_config.py
backend/infrastructure/postgresql/: config_loader.py  engine.py
backend/infrastructure/postgresql/migrations/: env.py
backend/infrastructure/postgresql/migrations/versions/: 2024-08-03-21-47_5b69e487ca83.py  2024-08-03-22-05_ba1e20d83f07.py  2024-08-03-22-07_e4929a5c68fc.py  2024-08-03-22-26_c7806acb022d.py  2024-08-03-22-28_2b220edc7d83.py  2024-08-05-10-56_01bb8a3fa9da.py
backend/infrastructure/postgresql/models/: __init__.py  refresh_token.py  user.py
backend/presenters/: __init__.py
backend/presenters/web/: application.py  exceptions.py  lifetime.py
backend/presenters/web/api/: common.py  dependencies.py  exceptions.py  router.py  schema.py
backend/presenters/web/api/auth/: __init__.py  exceptions.py  schemas.py  views.py
backend/presenters/web/api/user/: __init__.py  exceptions.py  schema.py  views.py
domain/: __init__.py
domain/song/: __init__.py  models.py
scripts/: entrypoint.sh
