[tool.poetry]
name = "perfect-chord"
version = "0.1.0"
description = "Web application for easy reading of chords when playing"
authors = ["Eugene Denkevich <e.denkevich@data-light.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pydantic = "2.7.3"


[tool.poetry.group.linters.dependencies]
pre-commit = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
